<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.micp.im.ui.customviews.ActivityTitle
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/graywhite"
        app:titleColor="@color/black"
        app:titleText="@string/setting" />

    <com.micp.im.ui.customviews.LineControllerView
        android:id="@+id/rl_change_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:canNav="true"
        app:isBottom="true"
        app:name="@string/change_pass" />

    <RelativeLayout
        android:id="@+id/ll_push_manage"
        style="@style/option_item_rl"
        android:background="@color/white"
        android:visibility="gone">

        <com.micp.im.widget.BlackTextView
            style="@style/option_item_text"
            android:text="@string/pushmanage" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/me_next" />
    </RelativeLayout>

    <com.micp.im.ui.customviews.LineControllerView
        android:id="@+id/ll_about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:canNav="true"
        app:isBottom="true"
        app:name="@string/about" />

    <RelativeLayout
        android:id="@+id/ll_feedback"
        style="@style/option_item_rl"
        android:background="@color/white"
        android:visibility="gone">

        <com.micp.im.widget.BlackTextView
            style="@style/option_item_text"
            android:text="@string/feedback" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/me_next" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/ll_clearCache"
        style="@style/option_item_rl"
        android:background="@color/white"
        android:visibility="gone">

        <com.micp.im.widget.BlackTextView
            style="@style/option_item_text"
            android:text="@string/clear_cache" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_blank_list"
        style="@style/option_item_rl"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:visibility="gone">

        <com.micp.im.widget.BlackTextView
            style="@style/option_item_text"
            android:text="@string/blanklist" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/me_next" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_room_setting"
        style="@style/option_item_rl"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:visibility="gone">

        <com.micp.im.widget.BlackTextView
            style="@style/option_item_text"
            android:text="直播设置" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/me_next" />
    </RelativeLayout>



    <com.micp.im.ui.customviews.LineControllerView
        android:id="@+id/ll_check_update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:canNav="true"
        app:isBottom="true"
        app:name="@string/check_new" />

    <LinearLayout
        android:id="@+id/ll_login_out"
        style="@style/option_item_rl"
        android:layout_marginTop="15dp"
        android:background="@color/white">

        <com.micp.im.widget.BlackTextView
            style="@style/option_item_text"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:text="@string/loginout" />
    </LinearLayout>
</LinearLayout>