<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/me"
                android:textColor="@color/color_2A"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/me_under_harvest"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/color_F1" />

        <!--头部-->
        <include layout="@layout/fragment_user_information_head" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/color_F1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_qrcode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:canNav="true"
                app:iconRes="@drawable/user_qrcode"
                app:isBottom="true"
                app:name="@string/qrcode"
                android:visibility="gone"/>

                app:name="我的主页"
            <android.support.v7.widget.RecyclerView
                android:id="@+id/user_information_video_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_profit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                app:canNav="true"
                app:iconRes="@drawable/user_harvest"
                app:isBottom="true"
                app:name="@string/message"
                android:visibility="gone"
                />



            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_level"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:canNav="true"
                app:iconRes="@drawable/user_grade"
                app:isBottom="true"
                app:name="@string/blog"
                android:visibility="gone"
                />

            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_diamonds"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:canNav="true"
                app:iconRes="@drawable/user_account"
                app:isBottom="true"
                app:name="我的M币"
                android:visibility="gone"
                />

            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_guard"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:canNav="true"
                app:iconRes="@drawable/user_account"
                app:isBottom="true"
                app:name="我的守护"
                android:visibility="gone"
                />




            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_switch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:isSwitch="true"
                app:iconRes="@drawable/user_account"
                app:isBottom="true"
                app:name="是否接听"
                android:visibility="gone"
                />


            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_pay"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:canNav="true"
                app:iconRes="@drawable/user_account"
                app:isBottom="true"
                app:name="收费设定"
                android:visibility="gone"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/color_F1"
                android:visibility="gone"/>


            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_micpid"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:canNav="true"
                app:iconRes="@drawable/user_account"
                app:isBottom="true"
                app:name="MiCp号"
                android:visibility="gone"
                />

            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_bind_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:canNav="true"
                app:iconRes="@drawable/user_account"
                app:isBottom="true"
                app:name="绑定手机号"
                android:visibility="gone"
                />


            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_details"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:canNav="true"
                app:iconRes="@drawable/user_details"
                app:isBottom="true"
                app:name="@string/details"
                android:visibility="gone"/>

            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_family"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:canNav="true"
                app:iconRes="@drawable/user_grade"
                app:isBottom="true"
                app:name="@string/family"
                android:visibility="gone"/>

            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_family_manage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:canNav="true"
                app:iconRes="@drawable/user_grade"
                app:isBottom="true"
                app:name="@string/ll_familymanage"
                android:visibility="gone"/>

            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_distribution"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:canNav="true"
                app:iconRes="@drawable/user_grade"
                app:isBottom="true"
                app:name="@string/distribution"
                android:visibility="gone"/>

            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_authenticate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:canNav="true"
                app:iconRes="@drawable/user_authentication"
                app:isBottom="true"
                app:name="@string/authenticate"
                android:visibility="gone"
                />

            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone"
                app:canNav="true"
                app:iconRes="@drawable/icon_about"
                app:isBottom="true"
                app:name="关于我们" />


            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_setting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:canNav="true"
                app:iconRes="@drawable/user_setting"
                app:isBottom="true"
                app:name="@string/team"
                android:visibility="gone"
                />

            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_shop"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone"
                app:canNav="true"
                app:iconRes="@drawable/shop"
                app:isBottom="true"
                app:name="@string/shop" />

            <com.micp.im.ui.customviews.LineControllerView
                android:id="@+id/ll_shopthings"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone"
                app:canNav="true"
                app:iconRes="@drawable/shop_things"
                app:isBottom="true"
                app:name="@string/shopthings" />


        </LinearLayout>



        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lv_mine"

            />
        <LinearLayout
            android:id="@+id/ll_loginout"
            style="@style/option_item_rl"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:visibility="gone">

            <com.micp.im.widget.BlackTextView
                style="@style/option_item_text"
                android:layout_width="fill_parent"
                android:gravity="center"
                android:text="@string/loginout" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>