<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.micp.im.ui.customviews.ActivityTitle
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/graywhite"
        app:titleColor="@color/black"
        app:titleText="@string/sex" />

    <ImageView
        android:id="@+id/iv_change_sex_male"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@drawable/choice_sex_male" />

    <com.micp.im.widget.BlackTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/man" />

    <ImageView
        android:id="@+id/iv_change_sex_female"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/choice_sex_femal" />

    <com.micp.im.widget.BlackTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/weman" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="性别选择后不能修改哦"
        android:textColor="@color/color_3D" />

</LinearLayout>