<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/ll_user_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/view_info_detail_data" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/color_F1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_following"
                style="@style/uset_information_ll">

                <TextView
                    android:id="@+id/tv_info_u_follow_num"
                    style="@style/user_formation_info"
                    android:text="0"
                    android:textColor="@color/color_2A" />

                <TextView
                    style="@style/user_formation_info"
                    android:layout_marginTop="5dp"
                    android:text="@string/following"
                    android:textColor="@color/color_86" />

            </LinearLayout>


            <View
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@color/color_CC" />


            <LinearLayout
                android:id="@+id/ll_fans"
                style="@style/uset_information_ll">

                <TextView
                    android:id="@+id/tv_info_u_fans_num"
                    style="@style/user_formation_info"
                    android:text="0"
                    android:textColor="@color/color_2A" />

                <TextView
                    style="@style/user_formation_info"
                    android:layout_marginTop="5dp"
                    android:text="@string/follower"
                    android:textColor="@color/color_86" />

            </LinearLayout>


            <View
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@color/color_CC" />

            <LinearLayout
                android:id="@+id/ll_live"
                style="@style/uset_information_ll">

                <TextView
                    android:id="@+id/tv_info_u_live_num"
                    style="@style/user_formation_info"
                    android:text="0"
                    android:textColor="@color/color_2A" />

                <TextView
                    style="@style/user_formation_info"
                    android:layout_marginTop="5dp"
                    android:text="@string/user_live"
                    android:textColor="@color/color_86" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</merge>
