<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <com.micp.im.ui.customviews.ActivityTitle
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:canBack="false"
        app:titleBackgroundColor="@color/color_F27"
        app:titleColor="@color/white"
        app:titleText="@string/login" />

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_title"
        android:orientation="vertical"
        android:padding="15dp">

        <com.micp.im.widget.BlackEditText
            android:id="@+id/et_loginphone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_login_editview_bg"
            android:drawableLeft="@drawable/login_phone_icon"
            android:drawablePadding="10dp"
            android:hint="请输入有效11位手机号码"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColorHint="@color/color_CC"
            android:textSize="15sp" />

        <com.micp.im.widget.BlackEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:layout_weight="5"
            android:background="@drawable/shape_login_editview_bg"
            android:drawableLeft="@drawable/login_password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/plase_fill_in_pass"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColorHint="@color/color_CC"
            android:textSize="15sp" />
    </LinearLayout>

    <com.micp.im.widget.BlackButton
        android:id="@+id/btn_dologin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@id/ll_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/login_button_bg"
        android:enabled="false"
        android:text="@string/immediate_login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_dologin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <TextView
            android:id="@+id/btn_doReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/immediate_register"
            android:textColor="@color/color_3"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_findPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/find_pass"
            android:textColor="@color/color_3"
            android:textSize="13sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_dologin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="快速登录"
            android:textColor="@color/color_3"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/ll_login_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/other_login_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableTop="@mipmap/login_wechat"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:text="微信"
                android:textColor="@color/color_3"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/other_login_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawablePadding="10dp"
                android:drawableTop="@mipmap/login_qq"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:text="QQ"
                android:textColor="@color/color_3"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/other_login_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawablePadding="10dp"
                android:drawableTop="@mipmap/login_weibo"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:text="新浪微博"
                android:textColor="@color/color_3"
                android:textSize="10sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_clause_icon"
            android:drawablePadding="5dp"
            android:text="我已详细阅读并同意"
            android:textColor="@color/color_9"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_login_clause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="用户协议"
            android:textColor="@color/color_F27"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="和"
            android:textColor="@color/color_9"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_login_declaration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="隐私协议"
            android:textColor="@color/color_F27"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>